[package]
name = "openapi_type_picker"
version = "0.2.1"
edition = "2024"
description = "A library for generating Rust data types according to the OpenAPI specification with the ability to select only the necessary types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aeiklorvy/openapi_type_picker"
readme = "README.md"
categories = ["development-tools::build-utils"]
keywords = ["build", "openapi", "swagger", "generator"]

[dependencies]
convert_case = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
